2009-05-30  Thomas Hinkle  <tom@grenville>

	* src/lib/reccard.py (RecSelector.ok): If recipe has a yields
	value, ask user how much they would like to add (this allows user
	to specify e.g. "3 cups" or "2 crusts", which is easier than
	changing the amount of recipes, which is what shows up in the
	ingredient list.
	(YieldSelector): Dialog for selecting amount of recipe based on
	yields value.
	(getYieldSelection): Convenience function for grabbing amount of
	recipe based on yields value (or not).

2009-05-30  Thomas M Hinkle  <tom@minime>

	* src/lib/test_plugin_loader.py: Add simple plugin_loader test
	file.
	* src/lib/gtk_extras/dialog_extras.py (ProgressDialog.setup_buttons):
	Bypass strange bug in pygtk with python2.6 which effectively
	changes ToggleButton API
	* Release 0.14.8

2009-05-29  Thomas M Hinkle  <tom@minime>

	* gourmet.desktop.in (_Comment): Update description of app.

	* setup.py (maybe_intltool): Apply patch from Rupert Swarbrick
	<rswarbrick@googlemail.com> which avoids running intltool-merge
	when not necessary.

2009-05-28  Thomas M Hinkle  <tom@minime>

	* MANIFEST: Don't include test_* files in MANIFEST.

2009-05-26  Thomas M Hinkle  <tom@minime>

	* src/lib/plugins/browse_recipes/browser.py (RecipeBrowserView.build_base_model):
	Don't include yields in browser.

2009-05-25  Thomas M Hinkle  <tom@minime>

	* src/lib/plugins/import_export/mealmaster_plugin/mealmaster_importer_plugin.py (test_dir):
	Look for sample recs in src/tests/recipe_files...

	* src/lib/exporters/test_exportManager.py (TestExports.testSingleExport):
	Improve error message when plugin's check_export method throws an
	error.

2009-05-24  Thomas M Hinkle  <tom@minime>

	* src/lib/importers/xml_importer.py (Converter.do_run): Make sure
	we get added_recs from recHandler class.

	* src/lib/importers/importer.py (Importer.__init__): Get
	keymanager using new singleton access method.

	* src/lib/importers/importManager.py (ImportManager.import_filenames):