@@ -1,7 +1,7 @@
 TODO
 * Python 2.6 Compatability
    - interactive importer & Threads module (Threads now complained if
-   not initialized and we set name).
+   not initialized and we set name).[X]
 
 * Change from servings to yield
    Allow different kinds of yields, not just servings. This will let a
@@ -11,12 +11,12 @@ TODO
    - Recipe index [X]
    - importer base classes [X]
      - Changes: convert_servings -> convert_str_to_num
-   - exporter base classes
-   - printing
+   - exporter base classes [X]
+   - printing [X]
    - Plugins
      - Importer plugins [X]
      - Exporter plugins [X]
-     - Browsing plugins 
+     - Browsing plugins [X]
 
 * Implement menu-planner plugin 
    
